--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,13 @@
 <resources>
     <string name="app_name">InfoBits</string>
-    <string name="action_settings">Settings</string>
     <string name="Username">Username</string>
     <string name="Password">Password</string>
     <string name="emptystring" />
     <string name="emptyString" />
     <string name="forgot">Enter your BITS mail</string>
     <string name="forgot_pass">Forgot Password</string>
-    <string name="Login">Login</string>
+    <string name="Login">Log In</string>
+    <string name="logout">Log Out</string>
+    <string name="account">Account</string>
+    <string name="title_activity_communication_panel">Communication Panel</string>
 </resources>
