--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,6 @@
 <resources>
     <string name="app_name">InfoBits</string>
-<<<<<<< 92290b405a441269f365fa619107df895519c755
-    <string name="Username">Username</string>
-    <string name="Password">Password</string>
-    <string name="emptystring" />
-    <string name="emptyString" />
-    <string name="forgot">Enter your BITS mail</string>
-    <string name="forgot_pass">Forgot Password</string>
-    <string name="Login">Log In</string>
-    <string name="logout">Log Out</string>
-    <string name="account">Account</string>
-    <string name="title_activity_communication_panel">Communication Panel</string>
-=======
->>>>>>> Updates
+<string name="drawer_open">drawer_open</string>
+    <string name="drawer_close">drawer_close</string>
+
 </resources>
