--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,7 @@
     <string name="Signup">Sign Up</string>
     <string name="logout">Log Out</string>
     <string name="account">Account</string>
-    <string name="title_activity_communication_panel">Communication Panel</string>
-    <string name="title_activity_conversation">Communication Panel</string>
+    <string name="title_activity_communication_panel">ConnectWithLibrary</string>
     <string name="title_activity_user_settings">User Settings</string>
     <string name="name">Name</string>
     <string name="email">Email</string>
@@ -24,4 +23,7 @@
     <string name="new_password">New Password</string>
     <string name="confirm_password">Confirm Password</string>
     <string name="upload_image">Upload Image</string>
+    <string name="title_activity_form">Form</string>
+    <string name="action_settings">Settings</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 </resources>
