Library Resources Page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Library</string>
     <string name="homepage">InfoBITS</string>
+    <string name="libres">Library Resources</string>
     <string name="Username">Username</string>
     <string name="Password">Password</string>
     <string name="emptystring" />
