Ebooks, Question Papers

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,7 @@
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="no_news">No Headlines Found</string>
+    <string name="title_activity_ebooks">E-Books</string>
+    <string name="intech">Intech</string>
+    <string name="openaccess">openAccess</string>
 </resources>
