--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="no_news">No Headlines Found</string>
+    <string name="no_news_for_week">No Headlines Found for this week</string>
     <string name="title_activity_ebooks">E-Books</string>
     <string name="title_infoBits">Info Bits Bulletin</string>
     <string name="intech">Intech</string>
@@ -44,4 +45,5 @@
     <string name="drawer_menu_qp">Question Papers</string>
     <string name="drawer_menu_odb">Online Databases</string>
     <string name="drawer_menu_opac">WEB OPAC</string>
+    <string name="online_db">Online Databases</string>
 </resources>
